# ABlaze

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  \  a.laze  install.sh  logo.png~  main.cpp  result.laze  tags  test.ab
.cache/clangd/index/: ErrorThrower.cpp.198485D040B2BB55.idx  ErrorThrower.h.2C8E1D0F123687C3.idx  ErrorThrowerTest.cpp.4B34FA6F7BE3E35A.idx  Lexer.cpp.1AE1432C7CAE0A93.idx  Lexer.h.FDC579B35FC28445.idx  LexerTest.cpp.331EF88C01F0F920.idx  Token.h.E9FF37528BC541EE.idx  TokenType.h.BCBCE023AC7844B0.idx  gmock-actions.h.D72D9271305F72E7.idx  gmock-all.cc.1D66F633B3DEDE9A.idx  gmock-cardinalities.cc.39E22A8FC89B6AB0.idx  gmock-cardinalities.h.292B91126BB8D7C1.idx  gmock-function-mocker.h.F2C92354A814D7E4.idx  gmock-generated-actions.h.267BE11CDFBBEF7A.idx  gmock-generated-actions.h.CEF94F75504A24A6.idx  gmock-internal-utils.cc.A9E6F5EDB6A3BCC7.idx  gmock-internal-utils.h.5614AF8274B0FB93.idx  gmock-matchers.cc.EE14278056C793B4.idx  gmock-matchers.h.50F9C5DB56DE8D0B.idx  gmock-matchers.h.E29E757801728D9B.idx  gmock-more-matchers.h.2F502824B4C84D41.idx  gmock-nice-strict.h.D48ED595F63EF896.idx  gmock-port.h.061E7F6A7E2C59E2.idx  gmock-port.h.186D204F15E0358C.idx  (+40 more)
.github/ISSUE_TEMPLATE/: bug_report.md  code-improvement.md  feature_request.md
AST/: AST.cpp  AST.h  ASTGen.cpp  ASTGen.h  CMakeLists.txt  cmake_install.cmake
ByteCodeGenerator/: ByteGen.cpp  ByteGen.h  CMakeLists.txt
ErrorThrower/: CMakeLists.txt  ErrorThrower.cpp  ErrorThrower.h  cmake_install.cmake
Google_tests/: ASTBasicTest.cpp  ASTErrorTest.cpp  ASTGeneralTests.cpp  ASTTest.cpp  BaseASTTest.cpp  ByteCodeTest.cpp  CMakeLists.txt  ErrorThrowerTest.cpp  Google_Tests_run  LexerTest.cpp  SematicAnTest.cpp  VMTest.cpp  cmake_install.cmake
Lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h  Token.h  TokenType.h  cmake_install.cmake
Lib/: array.abz  math.abz  strings.abz
Linker/: CMakeLists.txt  Linker.cpp  Linker.h
Sematic/: CMakeLists.txt  SematicAn.cpp  SematicAn.h
VM/: ByteLexer.cpp  ByteLexer.h  ByteToken.h  ByteType.h  CMakeLists.txt  Vm.cpp  Vm.h
docs/: Gemfile  _config.yml
docs/.circleci/: config.yml
docs/_data/: toc.yml
docs/_docs/: arrays.md  classes.md  control-structures.md  files.md  functions.md  getting-started.md  maps.md  operators.md  variables.md
docs/pages/: about.md  index.md
